entro-haystack-deployment.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "entro-haystack"
  namespace: "default"
  labels:
    app: "entro-haystack"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "entro-haystack"
  template:
    metadata:
      labels:
        app: "entro-haystack"
    spec:
      containers:
      - name: "entro-haystack-1"
        image: "us.gcr.io/entro-production/entro-haystack:latest"
