hasura.yaml
apiVersion: v1
kind: Service
metadata:
  name: hasura
spec:
  selector:
    app: hasura
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
