entro-haystack-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: entro-haystack-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: entro-haystack-address
    networking.gke.io/managed-certificates: entro-haystack-certificate
spec:
  backend:
    serviceName: entro-haystack-service
    servicePort: 80
