hasura-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hasura-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: entroprise-hasura
    networking.gke.io/managed-certificates: hasura-cert
spec:
  backend:
    serviceName: hasura
    servicePort: 80
